deploy: 1fd9485d6e5487fe777f881174f4ee3a68840fc9

--- a/it/index.html
+++ b/it/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang=it><head><title></title><link rel=canonical href><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url="></head></html>
+<!doctype html><html lang=it><head><title>https://raffaelecalza.github.io/unimi-calendar/</title><link rel=canonical href=https://raffaelecalza.github.io/unimi-calendar/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://raffaelecalza.github.io/unimi-calendar/"></head></html>
